IVYPORTAL-6304: Various or urgent requests in IVYPORTAL S164 - Fix bug Dashboard layout is broken if task name is too long (Medium screen): Align Statistic chart in Dashboard

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -4083,12 +4083,12 @@ _:-ms-input-placeholder, :root .line-process-chain .line-horizontal-process-step
 /* Medium screen */
 @media (min-width: 1366px) and (max-width: 1919px) {
   .statistic-carousel {
-    width: 30rem;
+    width: 28rem !important;
     text-align: center;
   }
 
   .compact-mode .jqplot-target {
-    width: 28rem;
+    width: 26rem;
   }
 }
 
